Problem Set 5 (Questions)

--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -35,6 +35,9 @@
 \subfile{PSet4/pset4.tex}
 \newpage
 
+\subfile{PSet5/pset5.tex}
+\newpage
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
